--- a/server/index.html
+++ b/server/index.html
@@ -129,7 +129,7 @@
         <h1>Tilsluttet til netværket!</h1>
 
         <p>Nu skal du downloade klient programmet <a href="https://github.com/penewold/crazy/releases/download/test/crazyhello.exe" download="dørklokke-setup">her</a></p>
-        
+        <p>test</p>
     </div>
 </body>
 </html>
